--- a/main.ipynb
+++ b/main.ipynb
@@ -140,6 +140,55 @@
     "    if notcomp != '':\n",
     "        not_compatible.append(properties)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fwert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to do:\n",
+    "#   Random\n",
+    "#       check if there are less than 4 schedules in our set. \n",
+    "#       If there are, set fwert = 0. \n",
+    "#       Once this is 0, the random function will be called that Emily made which will return another schedule\n",
+    "#   Deletion\n",
+    "#       check if there are more schedules in our set than c (a predefined constant).\n",
+    "#       if there are, set fwert = 1;\n",
+    "#       this will cause deletion to be selected and it will deleted the top schedule in our max heap of schedules (worst one)\n",
+    "#   Choose fselect\n",
+    "#       if the other two aren't chosen, this one is\n",
+    "#       fwert = 2 and this causes it to go into fselect (defined by Kourosh)\n",
+    "\n",
+    "def fwert(num):\n",
+    "    match num:\n",
+    "        case 0: # Random\n",
+    "            # call random function\n",
+    "            # Random()\n",
+    "            # add the new schedule to our max heap\n",
+    "            return \"zero\"\n",
+    "        case 1: # Deletion\n",
+    "            return \"one\"\n",
+    "        case 2: # fselect\n",
+    "            return \"two\"\n",
+    "        case default: #fselect\n",
+    "            return \"two\"\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
