--- a/main.ipynb
+++ b/main.ipynb
@@ -154,6 +154,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Author: Khadeeja Abbas\n",
+    "\n",
+    "from heapq import heapify, heappush, heappop \n",
+    "\n",
     "# to do:\n",
     "#   Random\n",
     "#       check if there are less than 4 schedules in our set. \n",
@@ -167,19 +171,41 @@
     "#       if the other two aren't chosen, this one is\n",
     "#       fwert = 2 and this causes it to go into fselect (defined by Kourosh)\n",
     "\n",
+    "heap = []\n",
+    "heapify(heap)\n",
+    "\n",
+    "def assignNum(limitOfSchedules):\n",
+    "    num = 0 if len(heap) <= 4 else 2\n",
+    "    num = 1 if len(heap) > limitOfSchedules else 2\n",
+    "    return num\n",
+    "# check how many schedules are in our heap\n",
     "def fwert(num):\n",
     "    match num:\n",
     "        case 0: # Random\n",
     "            # call random function\n",
+    "            newSchedule = OrTree.geneateSchedule()\n",
     "            # Random()\n",
+    "            \n",
     "            # add the new schedule to our max heap\n",
-    "            return \"zero\"\n",
+    "            heappush(heap, newSchedule)\n",
+    "            return \n",
     "        case 1: # Deletion\n",
-    "            return \"one\"\n",
+    "            heappop(heap)\n",
+    "            return \n",
     "        case 2: # fselect\n",
-    "            return \"two\"\n",
+    "            # call fselect\n",
+    "            fselect()\n",
+    "            return \n",
     "        case default: #fselect\n",
-    "            return \"two\"\n",
+    "            # call fselect\n",
+    "            fselect()\n",
+    "            return \n",
+    "        \n",
+    "def processSchedules():\n",
+    "    limitOfSchedules = 30\n",
+    "    num = assignNum(limitOfSchedules)\n",
+    "    fwert(num)\n",
+    "\n",
     "            "
    ]
   },
@@ -193,13 +219,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
