changed if statements cuz they weren't working

--- a/fwert.ipynb
+++ b/fwert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,10 +51,12 @@
     "                1 -> Remove the worst schedule.\n",
     "                2 -> Select the next best schedule.\n",
     "        \"\"\"\n",
-    "        # If the heap has 4 or fewer schedules, choose the random operation (0). Else choose fselect (2)\n",
-    "        num = 0 if len(self.heap) <= 4 else 2\n",
-    "        # If the heap exceeds the limit, choose the deletion operation (1). Else choose fselect (2)\n",
-    "        num = 1 if len(self.heap) > limitOfSchedules else 2\n",
+    "        if len(self.heap) <= 4:\n",
+    "            num = 0  # Random operation\n",
+    "        elif len(self.heap) > limitOfSchedules:\n",
+    "            num = 1  # Deletion operation\n",
+    "        else:\n",
+    "            num = 2  # fselect\n",
     "        return num\n",
     "\n",
     "    def fwert(self, num):\n",
@@ -70,20 +72,32 @@
     "        match num:\n",
     "            case 0:  # Add a random schedule\n",
     "                # Generate a new schedule.\n",
-    "                newSchedule = OrTree.generateSchedule()\n",
+    "                newSchedule = 5\n",
+    "                #newSchedule = OrTree.generateSchedule()\n",
     "                # Add the new schedule to the heap.\n",
     "                heappush(self.heap, newSchedule)\n",
+    "                print(self.heap)\n",
+    "                return\n",
     "\n",
     "            case 1:  # Remove the worst schedule\n",
     "                # Remove the root of the heap (the worst schedule in a min heap).\n",
     "                heappop(self.heap)\n",
+    "                print(self.heap)\n",
+    "\n",
+    "                return\n",
     "\n",
     "            case 2:  # Select the best schedule\n",
     "                # Call the selection function.\n",
-    "                fselect()\n",
+    "                print(\"fselect\")\n",
+    "                print(self.heap)\n",
+    "\n",
+    "                #fselect()\n",
+    "                return\n",
     "\n",
     "            case _:  # Default case: also perform selection\n",
-    "                fselect()\n",
+    "                print(\"fselect\")\n",
+    "                #fselect()\n",
+    "                return\n",
     "\n",
     "    def processSchedules(self, limitOfSchedules):\n",
     "        \"\"\"\n",
@@ -96,8 +110,10 @@
     "        \"\"\"\n",
     "        # Determine the operation to perform\n",
     "        num = self.assignNum(limitOfSchedules)\n",
-    "        # Execute the determined operation\n",
-    "        self.fwert(num)"
+    "        # Executes the determined operation ONCE\n",
+    "        \n",
+    "        self.fwert(num)\n",
+    "        "
    ]
   },
   {
@@ -126,7 +142,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   }
  },
