--- a/fwert.ipynb
+++ b/fwert.ipynb
@@ -89,6 +89,7 @@
     "            case 2:  # Select the best schedule\n",
     "                # Call the selection function.\n",
     "                print(\"fselect\")\n",
+    "                f_select(self.heap)\n",
     "                print(self.heap)\n",
     "\n",
     "                #fselect()\n",
@@ -96,7 +97,7 @@
     "\n",
     "            case _:  # Default case: also perform selection\n",
     "                print(\"fselect\")\n",
-    "                #fselect()\n",
+    "                f_select(self.heap)\n",
     "                return\n",
     "\n",
     "    def processSchedules(self, limitOfSchedules):\n",
