--- a/main.ipynb
+++ b/main.ipynb
@@ -209,143 +209,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CMSAU13T3DIV01PRC01,CMSAU13T3DIV02OPN02\n",
-      "CMSAU17T1DIV01,CMSAU13T3DIV01\n",
-      "CMSAU17T1DIV01,CMSAU13T3DIV02\n",
-      "CMSAU17T1PRC01,CMSAU13T3DIV02\n",
-      "CMSAU13T3DIV01,CMSAU17T1PRC01\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Add all not compatible mentions to list in 'Incompatible' column\n",
-    "for notcomp in split_data[6].split('\\n'):\n",
-    "    string = notcomp.replace(' ', '')\n",
-    "    if len(string) > 0: # If not empty\n",
-    "        print(string)\n",
-    "        event1, event2 = string.strip().split(',')\n",
-    "        if event1 in events.index and event2 in events.index:\n",
-    "            events.at[event1, 'Incompatible'].append(event2)\n",
-    "            events.at[event2, 'Incompatible'].append(event1)\n",
-    "        else:\n",
-    "            print(f\"Warning: One of the events {event1} or {event2} is not in the events DataFrame.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CMSAU13T3DIV01,MO,8:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Add all unwanted slots to the list in 'Unwanted' column for each event mentioned\n",
-    "for unwanted in split_data[7].split('\\n'):\n",
-    "    unwanted = unwanted.replace(' ','')\n",
-    "    if len(unwanted)>0:\n",
-    "        print(unwanted)\n",
-    "        event, day, time = unwanted.strip().split(',')\n",
-    "        if not event in events.index:\n",
-    "            print(f'Entry error: {event} is not in table')\n",
-    "        else:\n",
-    "            event = get_index(event)\n",
-    "            events.at[event, 'Unwanted'].append(day + time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TU,9:30,CMSAU13T3DIV01,10\n",
-      "MO,8:00,CMSAU13T3DIV01PRC01,3\n",
-      "TU,9:30,CMSAU13T3DIV02,10\n",
-      "TU,10:00,CMSAU13T3DIV01OPN02,5\n",
-      "Entry error: CMSAU13T3DIV01OPN02 is not in table\n",
-      "MO,8:00,CMSAU13T3DIV02OPN02,1\n",
-      "MO,10:00,CMSAU13T3DIV02OPN02,7\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Add all slot preferences to the preference and preference value\n",
-    "# columns for each event mentioned\n",
-    "for pref in split_data[8].split('\\n'):\n",
-    "    pref = pref.replace(' ','')\n",
-    "    if len(pref) > 0:\n",
-    "        print(pref)\n",
-    "        day, time, index, value = pref.strip().split(',')\n",
-    "        if not index in events.index:\n",
-    "            print(f'Entry error: {index} is not in table')\n",
-    "        else:\n",
-    "            events.at[index, 'Pref'] = day + time\n",
-    "            events.at[index, 'Pref_value'] = value\n",
-    "events['Pref'] = events['Pref'].fillna('')\n",
-    "events['Pref_value'] = events['Pref_value'].fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUSAO18DIV01,CMSAU17T1DIV01\n"
-     ]
-    }
-   ],
-   "source": [
-    "for pair in split_data[9].split('\\n'):\n",
-    "    string = pair.replace(' ', '')\n",
-    "    if len(string) > 0: # If not empty\n",
-    "        print(string)\n",
-    "        event1, event2 = string.strip().split(',')\n",
-    "        if event1 in events.index and event2 in events.index:\n",
-    "            events.at[event1, 'Pair_with'].append(event2)\n",
-    "            events.at[event2, 'Pair_with'].append(event1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['CMSAU13T3DIV01', 'CMSAU13T3DIV02', 'CUSAO18DIV01', 'CMSAU17T1DIV01', 'CMSAU13T3DIV01PRC01', 'CMSAU13T3DIV02OPN02', 'CUSAO18DIV01PRC01', 'CMSAU17T1PRC01']\n"
-     ]
-    }
-   ],
-   "source": [
-    "available = events.index.tolist()\n",
-    "print(available)\n",
-    "# Remove events from this list as they are assigned to keep track"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,238 +244,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('CUSAO18DIV01', 'MO8:00'), ('CUSAO18DIV01PRC01', 'FR10:00')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Partial assignments used when f_trans selects branchs, before random choices\n",
-    "partial_assignments = []\n",
-    "for assign in split_data[10].split('\\n'):\n",
-    "    string = assign.replace(' ', '')\n",
-    "    if len(string) > 0: # If not empty\n",
-    "        team, day, time = string.strip().split(',')\n",
-    "        partial_assignments.append((team, day+time))\n",
-    "        events.at[team, 'Part_assign'] = day+time\n",
-    "print(partial_assignments)\n",
-    "events['Part_assign'] = events['Part_assign'].fillna('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>League</th>\n",
-       "      <th>Tier</th>\n",
-       "      <th>Div</th>\n",
-       "      <th>Practice_Type</th>\n",
-       "      <th>Num</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Unwanted</th>\n",
-       "      <th>Incompatible</th>\n",
-       "      <th>Pair_with</th>\n",
-       "      <th>Pref</th>\n",
-       "      <th>Pref_value</th>\n",
-       "      <th>Part_assign</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CMSAU13T3DIV01</th>\n",
-       "      <td>CMSA</td>\n",
-       "      <td>U13T3</td>\n",
-       "      <td>01</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>G</td>\n",
-       "      <td>[MO8:00]</td>\n",
-       "      <td>[CMSAU17T1DIV01, CMSAU17T1PRC01]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>TU9:30</td>\n",
-       "      <td>10</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CMSAU13T3DIV02</th>\n",
-       "      <td>CMSA</td>\n",
-       "      <td>U13T3</td>\n",
-       "      <td>02</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>G</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[CMSAU17T1DIV01, CMSAU17T1PRC01]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>TU9:30</td>\n",
-       "      <td>10</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CUSAO18DIV01</th>\n",
-       "      <td>CUSA</td>\n",
-       "      <td>O18</td>\n",
-       "      <td>01</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>G</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[CMSAU17T1DIV01]</td>\n",
-       "      <td></td>\n",
-       "      <td>0</td>\n",
-       "      <td>MO8:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CMSAU17T1DIV01</th>\n",
-       "      <td>CMSA</td>\n",
-       "      <td>U17T1</td>\n",
-       "      <td>01</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>G</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[CMSAU13T3DIV01, CMSAU13T3DIV02]</td>\n",
-       "      <td>[CUSAO18DIV01]</td>\n",
-       "      <td></td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CMSAU13T3DIV01PRC01</th>\n",
-       "      <td>CMSA</td>\n",
-       "      <td>U13T3</td>\n",
-       "      <td>01</td>\n",
-       "      <td>PRC</td>\n",
-       "      <td>01</td>\n",
-       "      <td>P</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[CMSAU13T3DIV02OPN02]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>MO8:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CMSAU13T3DIV02OPN02</th>\n",
-       "      <td>CMSA</td>\n",
-       "      <td>U13T3</td>\n",
-       "      <td>02</td>\n",
-       "      <td>OPN</td>\n",
-       "      <td>02</td>\n",
-       "      <td>P</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[CMSAU13T3DIV01PRC01]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>MO10:00</td>\n",
-       "      <td>7</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CUSAO18DIV01PRC01</th>\n",
-       "      <td>CUSA</td>\n",
-       "      <td>O18</td>\n",
-       "      <td>01</td>\n",
-       "      <td>PRC</td>\n",
-       "      <td>01</td>\n",
-       "      <td>P</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td></td>\n",
-       "      <td>0</td>\n",
-       "      <td>FR10:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CMSAU17T1PRC01</th>\n",
-       "      <td>CMSA</td>\n",
-       "      <td>U17T1</td>\n",
-       "      <td></td>\n",
-       "      <td>PRC</td>\n",
-       "      <td>01</td>\n",
-       "      <td>P</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[CMSAU13T3DIV02, CMSAU13T3DIV01]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td></td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    League   Tier Div Practice_Type Num Type  Unwanted  \\\n",
-       "CMSAU13T3DIV01        CMSA  U13T3  01                      G  [MO8:00]   \n",
-       "CMSAU13T3DIV02        CMSA  U13T3  02                      G        []   \n",
-       "CUSAO18DIV01          CUSA    O18  01                      G        []   \n",
-       "CMSAU17T1DIV01        CMSA  U17T1  01                      G        []   \n",
-       "CMSAU13T3DIV01PRC01   CMSA  U13T3  01           PRC  01    P        []   \n",
-       "CMSAU13T3DIV02OPN02   CMSA  U13T3  02           OPN  02    P        []   \n",
-       "CUSAO18DIV01PRC01     CUSA    O18  01           PRC  01    P        []   \n",
-       "CMSAU17T1PRC01        CMSA  U17T1               PRC  01    P        []   \n",
-       "\n",
-       "                                         Incompatible         Pair_with  \\\n",
-       "CMSAU13T3DIV01       [CMSAU17T1DIV01, CMSAU17T1PRC01]                []   \n",
-       "CMSAU13T3DIV02       [CMSAU17T1DIV01, CMSAU17T1PRC01]                []   \n",
-       "CUSAO18DIV01                                       []  [CMSAU17T1DIV01]   \n",
-       "CMSAU17T1DIV01       [CMSAU13T3DIV01, CMSAU13T3DIV02]    [CUSAO18DIV01]   \n",
-       "CMSAU13T3DIV01PRC01             [CMSAU13T3DIV02OPN02]                []   \n",
-       "CMSAU13T3DIV02OPN02             [CMSAU13T3DIV01PRC01]                []   \n",
-       "CUSAO18DIV01PRC01                                  []                []   \n",
-       "CMSAU17T1PRC01       [CMSAU13T3DIV02, CMSAU13T3DIV01]                []   \n",
-       "\n",
-       "                        Pref Pref_value Part_assign  \n",
-       "CMSAU13T3DIV01        TU9:30         10              \n",
-       "CMSAU13T3DIV02        TU9:30         10              \n",
-       "CUSAO18DIV01                          0      MO8:00  \n",
-       "CMSAU17T1DIV01                        0              \n",
-       "CMSAU13T3DIV01PRC01   MO8:00          3              \n",
-       "CMSAU13T3DIV02OPN02  MO10:00          7              \n",
-       "CUSAO18DIV01PRC01                     0     FR10:00  \n",
-       "CMSAU17T1PRC01                        0              "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -621,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Strings Example\n",
-    "games2 = split_data[3].split('\\n')\n",
+    "# games2 = split_data[3].split('\\n')\n",
     "\n",
-    "practice2 = split_data[4].split('\\n')\n",
+    "# practice2 = split_data[4].split('\\n')\n",
     "\n",
     "def get_prop(event: str, feature):\n",
     "    \"\"\"\n",
@@ -866,26 +497,22 @@
     "        self.assignments = events['Part_assign'].tolist()\n",
     "        return self.assignments\n",
     "        \n",
-    "    def get_Eval(self):\n",
+    "    def set_Eval(self):\n",
     "        total_df = events.copy()\n",
     "        total_df['Assigned'] = self.assignments['Slot']\n",
     "        df = pd.merge(total_df, game_slots, how = 'left', left_on = 'Assigned', right_index = True)\n",
     "        df = pd.merge(df, practice_slots, how = 'left', left_on = 'Assigned', right_index = True)    \n",
     "        \n",
     "        \n",
+    "        self.eval = pd.sum(df['Eval'])\n",
+    "        \n",
     "    \n",
     "    def assign(self, slots):\n",
     "        self.assignments['Slot'] = slots\n",
-    "        self.get_Eval(self)\n",
-    "        \n",
-    "\n",
-    "    \n",
-    "        \n",
+    "        self.set_Eval(self)\n",
     "        return self.eval\n",
     "    \n",
-    "    def toList(self):\n",
-    "        \n",
-    "    "
+    "    # def toList(self):\n"
    ]
   },
   {
